SERVER-44598 Shards do not treat the IGNORED version as "intended sharded"