src/mongo/db/s/collection_sharding_runtime.cpp
@@ -321,9 +321,6 @@ boost::optional<ScopedCollectionMetadata> CollectionShardingRuntime::_getMetadat
     auto const shardId = ShardingState::get(opCtx)->shardId();
 
     const auto& receivedShardVersion = *optReceivedShardVersion;
-    if (ChunkVersion::isIgnoredVersion(receivedShardVersion)) {
-        return boost::none;
-    }
 
     // An operation with read concern 'available' should never have shardVersion set.
     invariant(repl::ReadConcernArgs::get(opCtx).getLevel() !=
@@ -362,16 +359,24 @@ boost::optional<ScopedCollectionMetadata> CollectionShardingRuntime::_getMetadat
             str::stream() << "migration commit in progress for " << _nss.ns());
     }
 
-    if (receivedShardVersion.isWriteCompatibleWith(wantedShardVersion)) {
-        return _getCurrentMetadataIfKnown(atClusterTime);
-    }
-
     //
     // Figure out exactly why not compatible, send appropriate error message
     // The versions themselves are returned in the error, so not needed in messages here
     //
 
     StaleConfigInfo sci(_nss, receivedShardVersion, wantedShardVersion, shardId);
+
+    if (ChunkVersion::isIgnoredVersion(receivedShardVersion)) {
+        uassert(std::move(sci),
+                "no metadata found on multi-write operation, need to refresh",
+                !receivedShardVersion.getCanThrowSSVOnIgnored() ||
+                    _getCurrentMetadataIfKnown(atClusterTime));
+        return boost::none;
+    }
+
+    if (receivedShardVersion.isWriteCompatibleWith(wantedShardVersion)) {
+        return _getCurrentMetadataIfKnown(atClusterTime);
+    }
 
     uassert(std::move(sci),
             str::stream() << "epoch mismatch detected for " << _nss.ns() << ", "
